Fix Linux build, switch back to Qt 6

--- a/Platform/Linux/Makefile
+++ b/Platform/Linux/Makefile
@@ -1,7 +1,7 @@
 include ../../common.mk
 
 SOURCES = ActiveWindowObserver.cc KWin.cc PrivateActiveWindowObserver.cc
-PKG_LIBS = Qt6Core Qt6DBus
+QT_LIBS = Core DBus
 
 all: Linux.a
 
