--- a/Platform/macOS/Makefile
+++ b/Platform/macOS/Makefile
@@ -1,6 +1,6 @@
 include ../../common.mk
 
-SOURCES = ActiveWindowObserver.cc PrivateActiveWindowObserver.mm
+SOURCES = Platform.cc ActiveWindowObserver.cc PrivateActiveWindowObserver.mm
 QT_LIBS = Core
 CXXFLAGS += -x objective-c++ -fobjc-arc
 
@@ -8,7 +8,7 @@ all: macOS.a
 
 macOS.a: $(OBJECTS)
 	rm -f $@
-	ar rcs $@ $(OBJECTS)
+	$(AR) rcs $@ $(OBJECTS)
 
 clean:
 	rm -f $(OBJECTS) macOS.a
