--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,8 @@
 !/Platform/macOS/*.cc
 !/Platform/macOS/*.mm
 !/Platform/macOS/*.hpp
+!/Platform/Windows/
+!/Platform/Windows/Makefile
+!/Platform/Windows/*.cc
+!/Platform/Windows/*.hpp
 !/find_dlls.sh
