--- a/Platform/Linux/Makefile
+++ b/Platform/Linux/Makefile
@@ -1,11 +1,22 @@
 include ../../common.mk
 
-SOURCES = Platform.cc ActiveWindowObserver.cc KWin.cc PrivateActiveWindowObserver.cc
+SOURCES = Platform.cc ActiveWindowObserver.cc KWin.cc PrivateActiveWindowObserver.cc \
+	DBus.cc GNOME.cc GNOMEWindowObserverBackend.cc KDEWindowObserverBackend.cc
 QT_LIBS = Core DBus
+
+define bin2c
+echo "#include <stddef.h>" > $(2)
+echo "static const char $(2:.c=)[] = " >> $(2)
+hexdump -v -e '16/1 "_x%02X" "\n"' < $(1) | sed 's/_/\\/g; s/\\x  //g; s/.*/    "&"/' >> $(2)
+echo ";" >> $(2)
+echo -n "static const size_t $(2:.c=)_len = " >> $(2)
+wc -c < $(1) >> $(2)
+echo ";" >> $(2)
+endef
 
 all: Linux.a
 
-Linux.a: kwin_script.c $(OBJECTS)
+Linux.a: kwin_script.c gnome_script.c $(OBJECTS)
 	rm -f $@
 	$(AR) rcs $@ $(OBJECTS)
 
@@ -16,16 +27,26 @@ Linux.a: kwin_script.c $(OBJECTS)
 	cd .work && yarn add --modules-folder node_modules minify
 	[ -f .work/node_modules/.bin/minify ]
 
-kwin_script_minified.js: kwin_script.js .work/node_modules/.bin/minify
+gnome_script.zip: .work/gnome_script
+	zip -jr $@ $</*
+
+.work/gnome_script: gnome_script/metadata.json gnome_script/extension_minified.js
+	rm -rf "$@"
+	mkdir -p "$@"
+	cp $^ "$@"
+	mv "$@/extension_minified.js" "$@/extension.js"
+
+%_minified.js: %.js .work/node_modules/.bin/minify
 	.work/node_modules/.bin/minify --js < $< > $@
 
-kwin_script.c: kwin_script_minified.js
-	echo "static const char kwin_script[] = " > kwin_script.c
-	hexdump -v -e '16/1 "_x%02X" "\n"' < kwin_script_minified.js | sed 's/_/\\/g; s/\\x  //g; s/.*/    "&"/' >> kwin_script.c
-	echo ";" >> kwin_script.c
-	echo -n "static const size_t kwin_script_len = " >> kwin_script.c
-	wc -c < kwin_script_minified.js >> kwin_script.c
-	echo ";" >> kwin_script.c
+%.c: %_minified.js
+	$(call bin2c,$<,$@)
+
+%.c: %.zip
+	$(call bin2c,$<,$@)
 
 clean:
-	rm -f $(OBJECTS) Linux.a kwin_script.c kwin_script_minified.js
+	rm -rf .work/gnome_script
+	rm -f $(OBJECTS) Linux.a gnome_script.zip kwin_script.c \
+		kwin_script_minified.js gnome_script/extension_minified.js \
+		gnome_script.c
