--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -37,15 +37,7 @@ jobs:
         with:
           name: debug-windows-x86_64
           path: publish/Windows/debug
-      - name: Build Windows 32-bit debug build
-        run: |
-          docker run -e CONFIG=debug --rm -v "$(pwd)":/work shijima-qt-dev bash -c \
-            'mingw32-make clean && mingw32-make -j$(nproc)'
-      - name: Archive Windows 32-bit debug build
-        uses: actions/upload-artifact@v4
-        with:
-          name: debug-windows-i386
-          path: publish/Windows/debug
+          retention-days: 3
       - name: Build Linux x86_64 debug build
         run: |
           docker run -e CONFIG=debug --rm -v "$(pwd)":/work shijima-qt-dev bash -c \
@@ -55,3 +47,4 @@ jobs:
         with:
           name: debug-linux-x86_64
           path: publish/Linux/debug
+          retention-days: 3
