--- a/dev-docker/Dockerfile
+++ b/dev-docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM fedora:41
 
 RUN dnf -y group install development-tools
-RUN dnf -y install 'mingw32-qt6-*' 'mingw64-qt6-*' mingw32-gcc mingw32-gcc-c++ \
-    mingw64-gcc mingw64-gcc-c++ 'qt6-*-devel'
+RUN dnf -y install mingw64-qt6-qtbase mingw64-qt6-qtmultimedia mingw64-gcc \
+    mingw64-gcc-c++ qt6-qtmultimedia-devel qt6-qtbase-devel
 
 WORKDIR /work
