--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -42,6 +42,7 @@ jobs:
   build-linux:
     runs-on: ubuntu-20.04
     steps:
+      - run: exit 1
       - uses: actions/checkout@v4
         with:
           submodules: 'recursive'
@@ -76,4 +77,42 @@ jobs:
         with:
           name: debug-linux-x86_64
           path: publish/Linux/debug
+          retention-days: 1
+  build-macos:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: 'recursive'
+          token: ${{ secrets.PULL_TOKEN }}
+      - name: Fetch full history for Shijima submodules
+        env:
+          PULL_TOKEN: ${{ secrets.PULL_TOKEN }}
+        run: |
+          pushd libshijima
+          git remote set-url origin "https://${PULL_TOKEN}@github.com/pixelomer/libshijima.git"
+          git fetch --unshallow origin main
+          git remote set-url origin "git@github.com:pixelomer/libshijima"
+          echo "libshijima: $(git rev-list HEAD --count) commits"
+          popd
+      - name: Install Qt6
+        uses: jurplel/install-qt-action@v4
+        with:
+          aqtversion: '==3.1.*'
+          version: '6.9.0'
+          host: 'mac'
+          target: 'desktop'
+          arch: 'clang_64'
+          modules: 'qtmultimedia'
+      - name: Build macOS arm64 debug build
+        env:
+          CONFIG: debug
+        run: |
+          make clean
+          make -j$(nproc)
+      - name: Archive macOS arm64 debug build
+        uses: actions/upload-artifact@v4
+        with:
+          name: debug-macos-arm64
+          path: publish/macOS/debug
           retention-days: 1
