--- a/.github/workflows/build-debug.yaml
+++ b/.github/workflows/build-debug.yaml
@@ -1,4 +1,4 @@
-name: Build
+name: Build debug
 
 on:
   push:
@@ -16,7 +16,11 @@ jobs:
       - name: Fetch full history for Shijima submodules
         env:
           PULL_TOKEN: ${{ secrets.PULL_TOKEN }}
+          BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
         run: |
+          git remote set-url origin "https://${PULL_TOKEN}@github.com/pixelomer/Shijima-Qt.git"
+          git fetch --unshallow origin $BRANCH_NAME
+          git remote set-url origin "git@github.com:pixelomer/Shijima-Qt"
           pushd libshijima
           git remote set-url origin "https://${PULL_TOKEN}@github.com/pixelomer/libshijima.git"
           git fetch --unshallow origin main
@@ -48,7 +52,11 @@ jobs:
       - name: Fetch full history for Shijima submodules
         env:
           PULL_TOKEN: ${{ secrets.PULL_TOKEN }}
+          BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
         run: |
+          git remote set-url origin "https://${PULL_TOKEN}@github.com/pixelomer/Shijima-Qt.git"
+          git fetch --unshallow origin $BRANCH_NAME
+          git remote set-url origin "git@github.com:pixelomer/Shijima-Qt"
           pushd libshijima
           git remote set-url origin "https://${PULL_TOKEN}@github.com/pixelomer/libshijima.git"
           git fetch --unshallow origin main
