Add missing Icon entry in desktop file

--- a/shijima-qt.desktop
+++ b/shijima-qt.desktop
@@ -4,5 +4,6 @@ Version=1.0
 Name=Shijima-Qt
 Comment=A shimeji simulator made with Qt
 Exec=shijima-qt
+Icon=shijima-qt
 Terminal=false
 Categories=Game
