--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,7 +9,6 @@ jobs:
   build-windows:
     runs-on: ubuntu-latest
     steps:
-      - run: exit 1
       - uses: actions/checkout@v4
         with:
           submodules: 'recursive'
@@ -54,7 +53,6 @@ jobs:
   build-linux:
     runs-on: ubuntu-20.04
     steps:
-      - run: exit 1
       - uses: actions/checkout@v4
         with:
           submodules: 'recursive'
@@ -110,8 +108,8 @@ jobs:
           popd
       - name: Temporarily let gtar run as root
         run: |
-          sudo chown 0:0 /opt/homebrew/bin/gtar || true
-          sudo chmod u+s /opt/homebrew/bin/gtar || true
+          sudo chown 0:0 /opt/homebrew/bin/gtar
+          sudo chmod u+s /opt/homebrew/bin/gtar
       - name: Cache Qt6
         id: cache-qt6
         uses: actions/cache@v4
@@ -120,7 +118,7 @@ jobs:
           key: macos-13-macports-qt6
       - name: Revoke gtar's root permissions
         run: |
-          sudo chmod u-s /opt/homebrew/bin/gtar || true
+          sudo chmod u-s /opt/homebrew/bin/gtar
       - name: Install Qt6
         if: steps.cache-qt6.outputs.cache-hit != 'true'
         run: |
@@ -135,7 +133,7 @@ jobs:
           CONFIG: debug
         run: |
           make clean
-          make -j8
+          make -j6
       - name: Archive macOS x86_64 debug build
         uses: actions/upload-artifact@v4
         with:
@@ -144,5 +142,5 @@ jobs:
           retention-days: 1
       - name: Temporarily let gtar run as root
         run: |
-          sudo chown 0:0 /opt/homebrew/bin/gtar || true
-          sudo chmod u+s /opt/homebrew/bin/gtar || true
+          sudo chown 0:0 /opt/homebrew/bin/gtar
+          sudo chmod u+s /opt/homebrew/bin/gtar
