--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -43,6 +43,7 @@ jobs:
           gunzip -c < shijima-qt-dev.tar.gz | docker load
       - name: Build Windows x86_64 release build
         run: |
+          mkdir -p publish/Windows/release
           docker run -e CONFIG=release --rm -v "$(pwd)":/work shijima-qt-dev bash -c \
             'mingw64-make clean && mingw64-make -j$(nproc)'
           cp -r licenses publish/Windows/release/
