--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libshimejifinder"]
 	path = libshimejifinder
 	url = git@github.com:pixelomer/libshimejifinder
+[submodule "cpp-httplib"]
+	path = cpp-httplib
+	url = https://github.com/yhirose/cpp-httplib
