--- a/.github/workflows/build-debug.yaml
+++ b/.github/workflows/build-debug.yaml
@@ -12,10 +12,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: 'recursive'
-          token: ${{ secrets.PULL_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Fetch full history for Shijima submodules
         env:
-          PULL_TOKEN: ${{ secrets.PULL_TOKEN }}
+          PULL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
         run: |
           git remote set-url origin "https://${PULL_TOKEN}@github.com/pixelomer/Shijima-Qt.git"
@@ -60,10 +60,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: 'recursive'
-          token: ${{ secrets.PULL_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Fetch full history for Shijima submodules
         env:
-          PULL_TOKEN: ${{ secrets.PULL_TOKEN }}
+          PULL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
         run: |
           git remote set-url origin "https://${PULL_TOKEN}@github.com/pixelomer/Shijima-Qt.git"
@@ -106,10 +106,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: 'recursive'
-          token: ${{ secrets.PULL_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Fetch full history for Shijima submodules
         env:
-          PULL_TOKEN: ${{ secrets.PULL_TOKEN }}
+          PULL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
         run: |
           git remote set-url origin "https://${PULL_TOKEN}@github.com/pixelomer/Shijima-Qt.git"
