--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -52,7 +52,10 @@ jobs:
           path: publish/Windows/release
           retention-days: 1
   build-linux:
-    runs-on: ubuntu-20.04
+    runs-on: ${{ matrix.runner }}
+    strategy:
+      matrix:
+        runner: [ ubuntu-24.04-arm, ubuntu-20.04 ]
     steps:
       - uses: actions/checkout@v4
         with:
@@ -73,19 +76,19 @@ jobs:
           echo "libshijima: $(git rev-list HEAD --count) commits"
           popd
       - name: Install Qt6
-        uses: jurplel/install-qt-action@v3
+        uses: jdpurcell/install-qt-action@v5
         with:
-          aqtversion: '==3.1.*'
-          version: '6.7.3'
-          host: 'linux'
+          use-naqt: true
+          version: '6.8.2'
+          host: ${{ (matrix.runner == 'ubuntu-24.04-arm') && 'linux_arm64' || 'linux' }}
           target: 'desktop'
-          arch: 'linux_gcc_64'
+          arch: ${{ (matrix.runner == 'ubuntu-24.04-arm') && 'linux_gcc_arm64' || 'linux_gcc_64' }}
           modules: 'qtmultimedia'
           cache: true
       - name: Install build dependencies
         run: |
           sudo apt-get install -y libxcb-cursor0 libarchive-dev
-      - name: Build Linux x86_64 release build
+      - name: Build Linux release build
         env:
           CONFIG: release
         run: |
@@ -93,10 +96,10 @@ jobs:
           make -j$(nproc)
           make appimage
           cp -r licenses publish/Linux/release/
-      - name: Archive Linux x86_64 release build
+      - name: Archive Linux release build
         uses: actions/upload-artifact@v4
         with:
-          name: release-linux-x86_64
+          name: ${{ (matrix.runner == 'ubuntu-24.04-arm') && 'debug-linux-arm64' || 'debug-linux-x86_64' }}
           path: publish/Linux/release
           retention-days: 1
   build-macos:
